--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-router": "^3.1.3",
-        "vue-template-compiler": "^2.5.21"
+        "vue-template-compiler": "^2.5.21",
+        "vuex": "^3.1.1"
     }
 }
