--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
