ユーザ一覧を表示する管理画面を作成。 Userテーブルに管理者フラグと削除フラグを追加。

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=9dca037c5ae40d88e2a7",
-    "/css/app.css": "/css/app.css?id=de715945425235dd20ca"
+    "/js/app.js": "/js/app.js?id=4546a572e8e85313317a",
+    "/css/app.css": "/css/app.css?id=62cf40b4644e2683cd38",
+    "/js/app.js.map": "/js/app.js.map?id=394fbfb0e13538969feb",
+    "/css/app.css.map": "/css/app.css.map?id=1448d9413b961cab549c"
 }
